# xhsSign

./: .gitignore  README.md
js/: package-lock.json  package.json  shared.ts  test_run.ts  xhsClient.ts  xhsConfig.ts  xhsCryptoProcessor.ts  xhsCryptoUtils.ts  xhsFingerprint.ts  xhsFingerprintData.ts  xhsSigner.ts
python/: .gitignore  README.md  pyproject.toml
python/.github/ISSUE_TEMPLATE/: api_proposal.yml  bug_report.yml  config.yml  feature_request.yml  general.yml
python/.github/workflows/: ci.yml  release.yml
python/src/xhshow/: __init__.py  client.py  session.py
python/src/xhshow/config/: __init__.py  config.py
python/src/xhshow/core/: __init__.py  common_sign.py  crc32_encrypt.py  crypto.py
python/src/xhshow/data/: __init__.py  fingerprint_data.py
python/src/xhshow/generators/: __init__.py  fingerprint.py  fingerprint_helpers.py
python/src/xhshow/utils/: __init__.py  bit_ops.py  encoder.py  hex_utils.py  random_gen.py  url_utils.py  validators.py
python/tests/: test_cookie_parsing.py  test_crypto.py  test_session.py  test_url_utils.py
